[package]
name = "image-host"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"

env_logger = "0.9"

lazy_static = "1.4"
thiserror = "1.0"

tokio = { version = "1.17", features = ["full"] }
futures = { version = "0.3", features = ["std", "thread-pool"] }

reqwest = { version = "0.11", features = ["json", "stream"] }
lettre = "0.10.0-rc.3"

rand = "0.8"
regex = "1.5"
rust-crypto = "0.2"
lust = "0.1.1"
url = "2.2"
mime = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytemuck = "1.9"
bytes = "1.1"

image = "0.24"
mozjpeg = "0.9"
oxipng = "5.0"

base64 = "0.13"

mongodb = "2.2.0"

actix-files = "0.6"
actix-rt = "2.7"
actix-service = "2.0"
actix-http = "3.0"
actix-web = "4.0"

actix-multipart = "0.4"
actix-session = "0.6"
actix-identity = "0.4"

twapi = "0.7"

handlebars = { version = "4.0", features = ["dir_source"] }